syntax = "proto3";

option go_package = "github.com/brendoncarroll/go-p2p/p/p2pke";

message InitHello {
    uint32 version = 1;
    bytes timestamp_tai64n = 2;
    AuthClaim auth_claim = 3;
}

message RespHello {
    AuthClaim auth_claim = 2;
}

message InitDone {
    bytes sig = 1;
}

message AuthClaim {
    bytes key_x509 = 1;
    bytes sig = 2;
}
